tdf#120585: use applyColor and make it transparency-aware

An overloaded drawPolyPolygon for zero transparency case used to
exist and it used applyColor to fill cairo path. It was removed
by commit 7034311dce663c895577267110baadbec312d491 and the new
transparency-aware drawPolyPolygon missed cairo_set_operator call
that is present in applyColor. This works OK most of the time
but breaks sometimes when no transparency (~no antialiasing)
is involved.

To fix that add transparency argument to applyColor and use it
where applicable

Change-Id: Ib1b077e38e7f5d30778434d45be67284407a7d16